# final-task

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: python-app.yml
data/: model.joblib
mlruns/0/: meta.yaml
mlruns/0/b15f6caf7d784806a8c6d8073938fde6/: meta.yaml
mlruns/0/b15f6caf7d784806a8c6d8073938fde6/artifacts/model/: MLmodel  conda.yaml  model.pkl
mlruns/0/b15f6caf7d784806a8c6d8073938fde6/metrics/: accuracy  f1  precision
mlruns/0/b15f6caf7d784806a8c6d8073938fde6/tags/: mlflow.log-model.history
src/: database.py  pipeline.py  search_hyperparametrs.py  test_metrics.py  train.py
test/: t.py  test_train.py
test/mlruns/0/: meta.yaml
test/mlruns/0/87923a77bd8849409e779649374d8407/: meta.yaml
