[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
click = "^8.1.3"

[tool.poetry.scripts]
train = "src.train:train"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
